--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,7 +1,6 @@
 .div-buttons {
     width: 100%;
-    /* background-color: #D4F4F9; */
-    font-size: large;
+    background-color: #D4F4F9;
     height: 100px;
 }
 
