--- a/src/components/NavBar/Carrito/Carrito.css
+++ b/src/components/NavBar/Carrito/Carrito.css
@@ -1,5 +1,17 @@
+.div-carrito {
+    display: flex;
+}
+
 .carrito {
     height: 50px;
     margin-right: 30px;
 
+}
+
+p {
+    margin-right: 20px;
+    background-color: #D73110;
+    width: 30px;
+    border-radius: 20px;
+    color: #fafafa;
 }
