--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -35,6 +35,12 @@
     padding: 5px;
     width: 200px;
     border-radius: 20px;
-    border: 2px solid #30656D;
+    border: 1px solid #000000;
     background-color: #E7F6F9;
+}
+
+.button:focus {
+    outline: white 1px solid;
+    background-color: #30656D;
+    color: white;
 }
