--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -28,6 +28,7 @@
     justify-content: center;
     width: 100%;
     padding: 40px;
+
 }
 
 .button {
@@ -37,10 +38,20 @@
     border-radius: 20px;
     border: 1px solid #000000;
     background-color: #E7F6F9;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #000000;
 }
 
 .button:focus {
     outline: white 1px solid;
     background-color: #30656D;
     color: white;
+}
+
+
+.navlink {
+    text-decoration: none;
 }
